# pyls

./: .gitignore  README.md  item.py  pyls.py  pyls_arguments.py  pyproject.toml  structure.json
src/pyls/: .bashrc  __init__.py  __main__.py  custom_exceptions.py  item.py  pyls.py  pyls_arguments.py
src/pyls/json/: structure.json
test/pyls/: test_filter.py  test_flags.py  test_path.py
