[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
description = "Mimics the behavior of ls command"
version = "0.1"
requires-python = ">=3.11.6"
readme = "README.md"
authors = [
  {name = "Pratyusha Ghosh", email = "pratyusha.gh@gmail.com"},
]

[project.optional-dependencies]
dev =[
  "black",
]

[project.urls]
github = "https://github.com/yusha-g/pyls"

[project.scripts]
pyls = "pyls.pyls:main"
custom_exceptions = "pyls.custom_exceptions:main"

[tool.setuptools]
packages = ["pyls"]
package-dir = {"" = "src"}