[build-system]
requires = ["setuptools>=61.0", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
description = "Mimics the behavior of ls command"
version = "1.0.0"
requires-python = ">=3.11.6"
readme = "README.md"
authors = [
  {name = "Pratyusha Ghosh", email = "pratyusha.gh@gmail.com"},
]

[project.optional-dependencies]
dev =[
  "black",
]

[project.urls]
github = "https://github.com/yusha-g/pyls"

[project.scripts]
pyls = "pyls.pyls:main"